# fregate

./: .env.example  .gitignore  README.md  client.py  config.example.json  config.example.yaml  config.json  prompt_history.txt  pyproject.toml  requirements.txt
fregate/: __init__.py  cli.py  models.py  provider.py  report.py  runner.py  scorer.py  tasks.py
ollama_benchmark/: __init__.py  cli.py  reporter.py  runner.py  tasks.py
tasks/: code.yaml  features.yaml  french.yaml  reasoning.yaml  tools.yaml
