[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ollama-model-benchmark"
version = "0.1.0"
description = "Benchmark modeles Ollama locaux"
requires-python = ">=3.10"
dependencies = ["requests>=2.28", "rich>=13.0"]

[project.scripts]
ollama-bench = "ollama_benchmark.cli:main"
