[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fregate"
# Formerly ollama-model-benchmark — merged into fregate v2.0
version = "2.0.0"
description = "LLM benchmark suite — score models on code, reasoning, language, tools & features."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
fregate = "fregate.cli:main"
ollama-bench = "fregate.cli:main"  # backward compat alias
